--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/payloads-table/payloads-table.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/payloads-table/payloads-table.component.scss
@@ -27,6 +27,7 @@
 
     mat-header-row {
       min-height: 35px;
+      max-height: 35px;
       justify-content: space-between;
     }
 
@@ -73,11 +74,11 @@
     .cdk-column-actions {
       flex: 0 0 60px;
       width: 60px;
+      justify-content: center;
     }
 
     .icon {
-      margin-top: 2px;
-      margin-left: -6px;
+      margin-left: 8px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -92,8 +93,6 @@
     }
 
     .mat-mdc-cell:last-of-type {
-      justify-content: center;
-
       .row-action-btn {
         border: none;
         background-color: transparent;
