--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/payloads-table/payloads-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/payloads-table/payloads-table.component.html
@@ -52,7 +52,7 @@
           </span>
         </ng-container>
         <ng-container *ngIf="(simpleExperimentPayloadTableEditIndex$ | async) === rowIndex">
-          <mat-form-field class="dense-2">
+          <mat-form-field class="dense-2" subscriptSizing="dynamic">
             <input
               [type]="text"
               matInput
