--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/payloads-table/payloads-table.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/payloads-table/payloads-table.component.scss
@@ -32,8 +32,7 @@
     }
 
     mat-row {
-      min-height: 46px;
-      max-height: 46px;
+      height: 48px;
       justify-content: space-between;
     }
 
