--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/payloads-table/payloads-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/payloads-table/payloads-table.component.html
@@ -62,6 +62,7 @@
               required
               [matAutocomplete]="payloadRowAutoCompleteConditionCodes"
               (keyup)="handleFilterContextMetaDataConditions(rowData.payload, $event)"
+              appTrimInput
             />
             <mat-autocomplete #payloadRowAutoCompleteConditionCodes="matAutocomplete" panelWidth="fit-content">
               <mat-option
