add edit modal to payload card

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-payloads-section-card/experiment-payloads-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-payloads-section-card/experiment-payloads-section-card.component.html
@@ -24,6 +24,6 @@
     [partitions]="experiment.partitions || []"
     [isLoading$]="experimentService.isLoadingSelectedExperiment$"
     [actionsDisabled]="!(permissions$ | async)?.experiments.update"
-    (rowAction)="onRowAction($event, experiment.id, experiment.context[0])"
+    (rowAction)="onRowAction($event)"
   ></app-experiment-payloads-table>
 </app-common-section-card>
