--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-payloads-section-card/experiment-payloads-table/experiment-payloads-table.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-payloads-section-card/experiment-payloads-table/experiment-payloads-table.component.scss
@@ -42,10 +42,12 @@
 
     ::ng-deep tbody {
       tr.mat-mdc-row {
-        height: 56px;
+        height: 64px;
 
         td {
-          min-width: 96px;
+          vertical-align: top;
+          padding-top: 10px;
+          min-width: 100%;
           padding-left: 0;
           color: var(--black-2);
         }
@@ -61,22 +63,39 @@
       }
     }
 
-    // Column widths
-    .site-column {
-      width: 20%;
+    .decision-point-column {
+      width: 25%;
       padding-left: 32px;
     }
 
-    .target-column {
-      width: 20%;
-    }
-
     .condition-column {
-      width: 20%;
+      width: 25%;
     }
 
     .payload-column {
-      width: 30%;
+      width: 50%;
+    }
+
+    td.decision-point-column {
+      .stacked-content {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+      }
+    }
+
+    td.payload-column {
+      &.mat-mdc-cell {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+        line-height: 20px;
+        max-height: 50px;
+        overflow: hidden;
+        word-break: break-word;
+        text-overflow: ellipsis;
+      }
     }
 
     .actions-column {
